--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.SignInActivity"></activity>
+        <activity android:name=".ViewActivity"></activity>
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/title_activity_main"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".ui.SignInActivity" />
         <activity android:name=".ui.NewAccountActivity" />
         <activity android:name=".ui.SplashActivity" />
         <activity android:name=".ui.OnBoardingActivity">
